[package]
name = "app"
version = "0.1.0"
description = "A simple task-based time tracker for everyday use."
authors = ["ttntm"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
